# ChangeLog for app-office/libreoffice-bin-debug
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice-bin-debug/ChangeLog,v 1.4 2012/04/26 06:58:48 dilfridge Exp $

*libreoffice-bin-debug-3.5.2.2 (26 Apr 2012)

  26 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-debug-3.5.2.2.ebuild:
  Fresh x86 binpackages...

  02 Mar 2012; Agostino Sarubbo <ago@gentoo.org>
  libreoffice-bin-debug-3.4.5.2-r1.ebuild:
  Stable for amd64, wrt bug #398521

  24 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  libreoffice-bin-debug-3.4.5.2-r1.ebuild:
  Add x86 files

*libreoffice-bin-debug-3.4.5.2-r1 (22 Feb 2012)

  22 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libreoffice-bin-debug-3.4.5.2-r1.ebuild, +metadata.xml:
  New ebuild for split-out debug info files
